# moviefast

./: README.md  pyproject.toml
moviepy/: Clip.py
moviepy/audio/fx/: AudioFadeIn.py  AudioFadeOut.py  MultiplyStereoVolume.py  MultiplyVolume.py
moviepy/video/: VideoClip.py
moviepy/video/compositing/: CompositeVideoClip.py
moviepy/video/fx/: BlackAndWhite.py  FadeIn.py  FadeOut.py  GammaCorrection.py  HeadBlur.py  LumContrast.py  Margin.py  MaskColor.py  MasksAnd.py  MasksOr.py  MultiplyColor.py  Painting.py  Resize.py  Rotate.py  SuperSample.py  _gpu_convert_to_nv12.py
moviepy/video/io/: ImageSequenceClip.py  VideoFileClip.py  decord_gpu_reader.py  ffmpeg_reader.py  ffmpeg_writer.py  ffplay_previewer.py  gif_writers.py  opencv_reader.py  pynvcodec_writer.py
moviepy/video/tools/: cupy_utils.py  cuts.py  drawing.py  gpu_blend.py  gpu_render.py  numba_blend.py  scratch.py
tests/: test_ffmpeg_writer_cupy.py  test_gpu_render.py
